# pixlens

./: .gitignore  .gitmodules  =2.3.1  README.md  objects_textures_sizes_colors_styles.json  objects_textures_sizes_colors_styles_extended.json  objects_textures_sizes_colors_styles_test.json  pyproject.toml  requirements-dev.txt  requirements-null-text-inv.txt  requirements-server.txt  requirements.txt  results_disentanglement.json
disentanglement_files/: objects_textures_sizes_colors_styles_extended.json  readme.md
model_cfgs/: controlnet.yaml  diffedit.yaml  grounded_sam.yaml  instruct_pix2pix.yaml  kandinsky3.yaml  lcm.yaml  null_text_inversion.yaml  open_edit.yaml  owlvit_sam.yaml  vqgan_clip.yaml
pixlens/: base_model.py  pipeline.ipynb  utils.py
pixlens/cli/: pixlens_caption_cli.py  pixlens_cli.py  pixlens_detection_cli.py  pixlens_disentanglement_cli.py  pixlens_edit_cli.py  pixlens_editing_cli.py  pixlens_eval_cli.py  pixlens_eval_pipeline_cli.py  pixlens_evaluation_cli.py
pixlens/dataset/: edit_dataset.py  editval.py  magicbrush.py  prompt_utils.py
pixlens/detection/: __init__.py  detect_and_segment.py  grounded_sam.py  grounding_dino.py  interfaces.py  owl_vit.py  owl_vit_sam.py  sam.py  utils.py
pixlens/detection/automatic_label/: blip.py  interfaces.py  nltk_extractor.py
pixlens/editing/: __init__.py  controlnet.py  diffedit.py  diffedit_v2.py  instruct_pix2pix.py  interfaces.py  kandinsky3.py  lcm.py  null_text_inversion.py  open_edit.py  pix2pix.py  stable_diffusion.py  utils.py  vqgan_clip.py
pixlens/editing/impl/: helper_generate.py
pixlens/editing/impl/diffedit/: diffedit.py
pixlens/editing/impl/null_text_inversion/: controllers.py  hf_pipeline.py  null_inversion.py  ptp_utils.py  utils.py
pixlens/eval/: detect_and_segment.py  grounded_sam.py  grounding_dino.py  interfaces.py  owl-vit.py  owl_vit.py  owl_vit_SAM.py  owl_vit_sam.py  sam.py
pixlens/evaluation/: edit_dataset.py  evaluate_models.py  evaluation_pipeline.py  interfaces.py  multiplicity_resolver.py  preprocessing_pipeline.py  utils.py
pixlens/evaluation/operations/: alter_parts.py  background.py  background_preservation.py  color.py  disentangle_model.py  disentanglement.py  image_similarity.py  object_addition.py  object_removal.py  object_replacement.py  position_replacement.py  positional_addition.py  realism_evaluation.py  single_instance_removal.py  size.py  subject_preservation.py  texture.py  utils.py
pixlens/evaluation/operations/disentanglement_operation/: disentangle_model.py  disentanglement.py  utils.py
pixlens/evaluation/operations/visualization/: plotting.py
pixlens/evaluation/plot_results/: compute_disentanglement_scores.py  plot_disentanglement_utils.py
pixlens/image_editing_models/: controlnet.py  pix2pix.py  utils.py
pixlens/latent_space/: model.py  utils.py
pixlens/server/: .env  .flaskenv  config.py
pixlens/server/app/: __init__.py  ml_models.py  routes.py
pixlens/utils/: utils.py  yaml_constructible.py
pixlens/visualization/: annotation.py  plotting.py
stubs/edit_dataset/: edit_dataset.pyi
stubs/groundingdino/util/: box_ops.pyi  inference.pyi
stubs/segment_anything/: __init__.pyi  build_sam.pyi  predictor.pyi
stubs/segment_anything/modeling/: __init__.pyi  sam.pyi
stubs/transformers/: __init__.pyi  modeling_utils.pyi  processing_utils.pyi
(+56 files in other folders)
